// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`BookingForm matches snapshot for create mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 p-4"
  >
    <div
      class="bg-gradient-to-br from-white to-gray-50 rounded-3xl p-6 w-full max-w-md mx-auto max-h-[90vh] flex flex-col shadow-2xl border border-gray-200/50 overflow-hidden"
    >
      <div
        class="flex justify-between items-center mb-6 flex-shrink-0"
      >
        <h2
          class="text-xl font-bold text-gray-900"
        >
          Create New Booking
        </h2>
        <button
          class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
        >
          <span
            class="text-gray-500 font-bold"
          >
            ×
          </span>
        </button>
      </div>
      <form
        class="flex-1 space-y-6"
      >
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Room *
          </label>
          <select
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2025-08-15"
            />
          </div>
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2025-08-16"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="flex space-x-4 pt-6"
        >
          <button
            class="flex-1 px-6 py-3 border-2 border-gray-300 rounded-xl text-gray-700 font-semibold hover:bg-gray-50 transition-all duration-200"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transform hover:scale-105 transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none"
            type="submit"
          >
            Create Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot for edit mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 p-4"
  >
    <div
      class="bg-gradient-to-br from-white to-gray-50 rounded-3xl p-6 w-full max-w-md mx-auto max-h-[90vh] flex flex-col shadow-2xl border border-gray-200/50 overflow-hidden"
    >
      <div
        class="flex justify-between items-center mb-6 flex-shrink-0"
      >
        <h2
          class="text-xl font-bold text-gray-900"
        >
          Edit Booking
        </h2>
        <button
          class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
        >
          <span
            class="text-gray-500 font-bold"
          >
            ×
          </span>
        </button>
      </div>
      <form
        class="flex-1 space-y-6"
      >
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Room *
          </label>
          <select
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2024-01-15"
            />
          </div>
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2024-01-15"
              type="date"
              value="2024-01-17"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
            max="10"
            min="1"
            type="number"
            value="2"
          />
        </div>
        <div
          class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-2xl p-4 border border-blue-200/50"
        >
          <p
            class="text-sm font-semibold text-blue-800"
          >
            <strong>
              Total Price:
            </strong>
             $
            200.00
          </p>
        </div>
        <div
          class="flex space-x-4 pt-6"
        >
          <button
            class="flex-1 px-6 py-3 border-2 border-gray-300 rounded-xl text-gray-700 font-semibold hover:bg-gray-50 transition-all duration-200"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transform hover:scale-105 transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none"
            type="submit"
          >
            Update Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot with loading state 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50"
  >
    <div
      class="bg-gradient-to-br from-white to-gray-50 rounded-3xl p-6 shadow-2xl border border-gray-200/50"
    >
      <div
        class="animate-spin rounded-full h-8 w-8 border-b-2 border-blue-600 mx-auto"
      />
      <p
        class="text-center mt-2 text-gray-600"
      >
        Loading rooms...
      </p>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot with room selection 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 p-4"
  >
    <div
      class="bg-gradient-to-br from-white to-gray-50 rounded-3xl p-6 w-full max-w-md mx-auto max-h-[90vh] flex flex-col shadow-2xl border border-gray-200/50 overflow-hidden"
    >
      <div
        class="flex justify-between items-center mb-6 flex-shrink-0"
      >
        <h2
          class="text-xl font-bold text-gray-900"
        >
          Create New Booking
        </h2>
        <button
          class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
        >
          <span
            class="text-gray-500 font-bold"
          >
            ×
          </span>
        </button>
      </div>
      <form
        class="flex-1 space-y-6"
      >
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Room *
          </label>
          <select
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2025-08-15"
            />
          </div>
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2025-08-16"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="bg-gradient-to-r from-blue-50 to-indigo-50 rounded-2xl p-4 border border-blue-200/50"
        >
          <p
            class="text-sm font-semibold text-blue-800"
          >
            <strong>
              Total Price:
            </strong>
             $
            100.00
          </p>
        </div>
        <div
          class="flex space-x-4 pt-6"
        >
          <button
            class="flex-1 px-6 py-3 border-2 border-gray-300 rounded-xl text-gray-700 font-semibold hover:bg-gray-50 transition-all duration-200"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transform hover:scale-105 transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none"
            type="submit"
          >
            Create Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`BookingForm matches snapshot with validation errors 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/60 backdrop-blur-sm flex items-center justify-center z-50 p-4"
  >
    <div
      class="bg-gradient-to-br from-white to-gray-50 rounded-3xl p-6 w-full max-w-md mx-auto max-h-[90vh] flex flex-col shadow-2xl border border-gray-200/50 overflow-hidden"
    >
      <div
        class="flex justify-between items-center mb-6 flex-shrink-0"
      >
        <h2
          class="text-xl font-bold text-gray-900"
        >
          Create New Booking
        </h2>
        <button
          class="w-8 h-8 bg-gray-100 rounded-full flex items-center justify-center hover:bg-gray-200 transition-colors"
        >
          <span
            class="text-gray-500 font-bold"
          >
            ×
          </span>
        </button>
      </div>
      <form
        class="flex-1 space-y-6"
      >
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Room *
          </label>
          <select
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
          >
            <option
              value=""
            >
              Select a room
            </option>
            <option
              value="1"
            >
              Room 
              101
               - 
              SINGLE
               ($
              100
              /night)
            </option>
            <option
              value="2"
            >
              Room 
              102
               - 
              DOUBLE
               ($
              150
              /night)
            </option>
          </select>
        </div>
        <div
          class="grid grid-cols-2 gap-4"
        >
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-in Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2025-08-15"
            />
          </div>
          <div>
            <label
              class="block text-sm font-semibold text-gray-700 mb-2"
            >
              Check-out Date *
            </label>
            <input
              class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
              min="2025-08-15"
              type="date"
              value="2025-08-16"
            />
          </div>
        </div>
        <div>
          <label
            class="block text-sm font-semibold text-gray-700 mb-2"
          >
            Number of Guests *
          </label>
          <input
            class="w-full px-4 py-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent bg-white shadow-sm border-gray-300"
            max="10"
            min="1"
            type="number"
            value="1"
          />
        </div>
        <div
          class="flex space-x-4 pt-6"
        >
          <button
            class="flex-1 px-6 py-3 border-2 border-gray-300 rounded-xl text-gray-700 font-semibold hover:bg-gray-50 transition-all duration-200"
            type="button"
          >
            Cancel
          </button>
          <button
            class="flex-1 px-6 py-3 bg-gradient-to-r from-blue-500 to-blue-600 text-white rounded-xl font-semibold hover:shadow-lg transform hover:scale-105 transition-all duration-200 disabled:opacity-50 disabled:cursor-not-allowed disabled:transform-none"
            type="submit"
          >
            Create Booking
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
